fixed too much space around preview

--- a/src/styles/ElementAsideContainer/ElementAsideContainer.css
+++ b/src/styles/ElementAsideContainer/ElementAsideContainer.css
@@ -18,7 +18,6 @@
 }
 
 .asideHeader{
-    margin-bottom: 24px;
     margin-top: 16px;
 }
 
